# hep-io-demo

./: .gitignore  CMakeLists.txt  README.md
scripts/: generate_all.sh
src/hdf5_py/: read_hdf5.py  write_hdf5.py
src/phlex_example/: phlex_writer.py
src/root_rntuple/: CMakeLists.txt  rntuple_demo.cpp
src/root_ttree/: CMakeLists.txt  ttree_demo.cpp
